--- a/src/main/resources/public/assets/css/form.css
+++ b/src/main/resources/public/assets/css/form.css
@@ -3247,6 +3247,15 @@ button .icon-search {
 .picker-modal-content-date-months .date-prev {
   display: table-cell;
   cursor: pointer;
+  width: 0.625rem;
+  height: 1.563rem;
+  -webkit-mask-image: url("../media/icons/icon_arrow_left.svg");
+  mask-image: url("../media/icons/icon_arrow_left.svg");
+  -webkit-mask-repeat: no-repeat;
+  mask-repeat: no-repeat;
+  -webkit-mask-position: center;
+  mask-position: center;
+  background: #586872;
 }
 
 .picker-modal-content-date-months .date-text {
