#8998 [업무흐름] 신청서 양식 편집화면 디자인 적용 1. 팝업을 모달로 변경 (url 제거 포함) 2. 디자인 적용 3. 스크롤(가로) 굵기 조절

--- a/src/main/resources/public/src/scss/template/_scrollbars.scss
+++ b/src/main/resources/public/src/scss/template/_scrollbars.scss
@@ -9,7 +9,7 @@
 .scrollbar {
   >.os-scrollbar-horizontal {
     right: 0.625rem; // 10px
-    height: 0.75rem; // 12px
+    height: $scrollbar-thick;
     >.os-scrollbar-track {
       >.os-scrollbar-handle {
         min-width: 1.875rem; // 30px
@@ -150,7 +150,7 @@
 .inner-scrollbar {
   >.os-scrollbar-horizontal {
     right: 0.625rem; // 10px
-    height: 0.75rem; // 12px
+    height: $scrollbar-thick-sm;
     >.os-scrollbar-track {
       >.os-scrollbar-handle {
         min-width: 1.875rem; // 30px
@@ -223,7 +223,7 @@
 .inner-scrollbar-dark {
   >.os-scrollbar-horizontal {
     right: 0.625rem; // 10px
-    height: 0.75rem; // 12px
+    height: $scrollbar-thick-sm;
     >.os-scrollbar-track {
       >.os-scrollbar-handle {
         min-width: 1.875rem; // 30px
