--- a/src/main/resources/public/src/scss/theme/default/_variables.scss
+++ b/src/main/resources/public/src/scss/theme/default/_variables.scss
@@ -118,6 +118,10 @@ $form-edit-modal-height:                      22.5rem; // 360px
 $document-edit-modal-width:                   40rem; // 640px
 $document-edit-modal-height:                  50.63rem; // 810px
 
+//////////////////// 업무 흐름 신청서 양식 편집 모달 ////////////////////
+$document-display-modal-width:                66.875rem; // 1070px
+$document-display-modal-height:               26.25rem; // 420px
+
 /////////////////////////// contents //////////////////////////////
 $token-list-background-color:                 $white;
 $token-list-topic-color:                      $dark-gray;
