--- a/src/main/resources/public/src/scss/theme/default/_variables.scss
+++ b/src/main/resources/public/src/scss/theme/default/_variables.scss
@@ -110,9 +110,9 @@ $tree-modal-height:                           44.19rem; // 707px
 $import-modal-width:                          37.5rem; // 600px
 $import-modal-height:                         37.5rem; // 600px
 
-////////////////////// FORM EDIT / EXPORT /////////////////////////
-$form-edit-modal-width:                       34.38rem; // 550px
-$form-edit-modal-height:                      22.5rem; // 360px
+////////////////////// MODAL EDIT / EXPORT /////////////////////////
+$modal-edit-width:                       34.38rem; // 550px
+$modal-edit-height:                      22.5rem; // 360px
 
 ////////////////////// 업무 흐름 등록 / 수정 모달 /////////////////////////
 $document-edit-modal-width:                   40rem; // 640px
