#9262 디자인 사소한 수정사항 : 문서함 - 문서번호가 디자인 시안과 다르다.

--- a/src/main/resources/public/assets/css/document.css
+++ b/src/main/resources/public/assets/css/document.css
@@ -377,7 +377,9 @@ input, button, select, optgroup, textarea {
   padding: 8.438rem 0 0.9375rem 0;
 }
 
-.document-container .document-main .document-main-header .numbering-content label {
+.document-container .document-main .document-main-header .document-numbering {
+  font-size: 1rem;
+  font-weight: 400;
   color: #ACB4BF;
 }
 
