--- a/src/main/resources/public/src/scss/theme/default/contents/_contents-token.scss
+++ b/src/main/resources/public/src/scss/theme/default/contents/_contents-token.scss
@@ -31,18 +31,21 @@
         }
         &-row {
           flex: auto;
-          display: flex;
-          justify-content: space-between;
           padding: 1.875rem 3rem; // 30px 48px
           border-top: $token-list-border;
           border-right: $token-list-border;
           border-bottom: $token-list-border;
           &-content {
             cursor: pointer;
+            // 문서 제목
             .document {
               &-title {
-                align-items: center;
-                justify-content: flex-start;
+                // 문서 번호
+                .document-numbering {
+                  font-size: 1rem; // 16px
+                  font-weight: $font-weight-regular;
+                  color: $gray;
+                }
                 .text-ellipsis {
                   margin-right: 0.625rem; // 10px
                   max-width: 50rem; // 800px
@@ -62,15 +65,6 @@
           }
           &-info {
             .document {
-              &-detail {
-                display: flex;
-                align-items: center;
-                .document-user {
-                  display: inline-flex;
-                  align-items: center;
-                  justify-content: center;
-                }
-              }
               &-tag {
                 max-width: 23.75rem; // 380px
                 margin-top: 3.5rem; // 56px
