--- a/src/main/resources/public/template/token/tokenEdit.html
+++ b/src/main/resources/public/template/token/tokenEdit.html
@@ -17,9 +17,7 @@
         <form id="frm" name="frm">
             <div class="document-main flex-column align-items-center">
                 <div class="document-main-header flex-row justify-content-between align-items-center">
-                    <div class="numbering-content">
-                        <label th:text="|#{document.label.docNo} : ${documentNo}|"></label>
-                    </div>
+                    <span class="document-numbering" th:text="|#{document.label.docNo} : ${documentNo}|"></span>
                     <div class="btn-list">
                         <button type="button" class="default-line" onclick="openProcessStatusPopUp()" th:text="#{process.label.processMap}"></button>
                         <div id="button-panel"></div>
