--- a/src/main/resources/public/template/token/tokenList.html
+++ b/src/main/resources/public/template/token/tokenList.html
@@ -9,12 +9,12 @@
     </div>
     <div class="list-item flex-row" th:each="token: ${tokenList}">
         <div class="document-color" th:style="|background-color: ${token.documentColor}|"></div>
-        <div class="document-row">
+        <div class="document-row flex-row justify-content-between">
             <div class="document-row-content">
                 <span sec:authorize="hasAuthority('token.read')" th:onclick="openTokenEdit([[${token.tokenId}]])">
-                    <div class="document-title flex-row">
+                    <div class="document-title flex-row align-items-center">
                         <h3 th:text="${token.documentName}" class="text-ellipsis"></h3>
-                        <h5 th:text="${token.documentNo}" class="text-ellipsis"></h5>
+                        <span th:text="${token.documentNo}" class="document-numbering text-ellipsis"></span>
                     </div>
                     <div class="document-topic">
                         <h5 class="document-topic-item" th:each="topic: ${token.topics}" th:text="${topic}"></h5>
@@ -22,8 +22,8 @@
                 </span>
             </div>
             <div class="document-row-info">
-                <div class="document-detail float-right">
-                    <div class="document-user inline-flex">
+                <div class="document-detail flex-row align-items-center float-right">
+                    <div class="document-user inline-flex align-items-center justify-content-center">
                         <img class="profile-photo" alt="profile pic" th:src="${token.avatarPath}">
                         <h5 class="user-name" th:text="${token.createUserName}"></h5>
                     </div>
