--- a/src/main/resources/public/template/process/processAdminSearch.html
+++ b/src/main/resources/public/template/process/processAdminSearch.html
@@ -121,7 +121,7 @@
                         let options = {
                             title: isView ? i18n.msg('process.label.detail') : i18n.msg('process.label.edit') ,
                             body: createModalContent(responseObject),
-                            classes: 'modal-edit',
+                            classes: 'process-edit',
                             buttons: [],
                             close: {
                                 closable: false,
@@ -196,7 +196,7 @@
             const processModal = new modal({
                 title: i18n.msg('process.label.register'),
                 body: createModalContent(),
-                classes: 'modal-edit',
+                classes: 'process-edit',
                 buttons: [{
                     content: i18n.msg('common.btn.register'),
                     classes: "point-fill",
@@ -330,7 +330,7 @@
             const importModal = new modal({
                 title: i18n.msg('process.label.import'),
                 body: createImportModalContent(),
-                classes: 'modal-import',
+                classes: 'process-import',
                 buttons: [
                     {
                         content: i18n.msg('common.btn.check'),
