--- a/src/main/resources/public/src/scss/theme/default/_variables.scss
+++ b/src/main/resources/public/src/scss/theme/default/_variables.scss
@@ -110,7 +110,7 @@ $tree-modal-height:                           44.19rem; // 707px
 $import-modal-width:                          37.5rem; // 600px
 $import-modal-height:                         37.5rem; // 600px
 
-////////////////////// MODAL EDIT / EXPORT /////////////////////////
+////////////////////// FORM PROCESS EDIT / EXPORT ///////////////////////
 $modal-edit-width:                       34.38rem; // 550px
 $modal-edit-height:                      22.5rem; // 360px
 
