MR 수정 1. font-weight 변수로 변경

--- a/src/main/resources/public/src/scss/theme/default/_modal.scss
+++ b/src/main/resources/public/src/scss/theme/default/_modal.scss
@@ -128,7 +128,7 @@
         table {
           tr {
             th, td {
-              font-weight: 400;
+              font-weight: $font-weight-regular;
               font-size: 1rem; // 16px
               padding: 0 1.5rem 0.625rem 0; // 0 24px 10px 0
             }
