--- a/src/main/resources/public/template/form/formAdminSearch.html
+++ b/src/main/resources/public/template/form/formAdminSearch.html
@@ -56,10 +56,16 @@
             }
         }
 
-        // 폼 IMPORT시 유효성 검증
-        function checkRequired() {
+        // 유효성 검증
+        function checkValidation() {
             // 필수 체크
             if (isEmpty('form_name', 'form.msg.enterFormName')) {
+                return false;
+            }
+
+            // fileTemplate가 동적으로 생기고 존재여부로 파일 업로드를 체크하기 때문에 isEmpty 함수를 사용하기 어려움.
+            if (document.getElementById('dropZoneFileUpload') !== null && document.getElementById('fileTemplate') === null) {
+                aliceJs.alertWarning(i18n.msg('form.msg.selectImportFile'));
                 return false;
             }
             return true;
@@ -67,7 +73,7 @@
 
         // 폼 수정
         function saveForm(formId) {
-            if (checkRequired()) {
+            if (checkValidation()) {
                 const formInfo = {
                     name: document.getElementById('form_name').value,
                     desc: document.getElementById('form_description').value
@@ -283,24 +289,9 @@
             window.open('/forms/' + formId + '/view', 'form_' + formId + '_view', 'width=' + _width + ',height=' + _height + ','+ specs);
         }
 
-        // 폼 IMPORT시 유효성 검증
-        function checkImportRequired() {
-            // 필수 체크
-            if (isEmpty('form_name', 'form.msg.enterFormName')) {
-                return false;
-            }
-
-            // fileTemplate가 동적으로 생기고 존재여부로 파일 업로드를 체크하기 때문에 isEmpty 함수를 사용하기 어려움.
-            if (document.getElementById('fileTemplate') === null) {
-                aliceJs.alertWarning(i18n.msg('form.msg.selectImportFile'));
-                return false;
-            }
-            return true;
-        }
-
         //폼 IMPORT
         function importForm() {
-            if (checkImportRequired()) {
+            if (checkValidation()) {
                 let fileList = fileUploader.getFile();
                 const formInfo = {
                     formName: document.getElementById('form_name').value,
