--- a/src/main/resources/public/src/scss/document/_tag.scss
+++ b/src/main/resources/public/src/scss/document/_tag.scss
@@ -102,5 +102,18 @@
     margin: 0.625rem 0.3125rem; // 10px 5px
     padding: 0.4375rem; // 7px
     white-space: pre-line;
+
+    &:empty {
+      &::before {
+        opacity : 1;
+      }
+    }
+    // placehoder color
+    &::before {
+      color: $element-placeholder-font-color;
+    }
+    &::after {
+      color: $element-font-color;
+    }
   }
 }
