#8998 [업무흐름] 신청서 양식 편집화면 디자인 적용 1. 크기 조정

--- a/src/main/resources/public/template/document/documentAdminSearch.html
+++ b/src/main/resources/public/template/document/documentAdminSearch.html
@@ -298,7 +298,7 @@
                         body: createDialogContent(),
                         classes: 'document-display',
                         buttons: [{
-                            content: i18n.msg('common.btn.save'),
+                            content: i18n.msg('common.btn.modify'),
                             classes: "point-fill",
                             bindKey: false,
                             callback: function(modal) {
