--- a/src/main/resources/public/template/layout/portalLayout.html
+++ b/src/main/resources/public/template/layout/portalLayout.html
@@ -10,7 +10,7 @@
         <div class="alice-wrapper">
             <div class="portal-container flex-column">
                 <div class="header">
-                    <a href="/portal/portalMain">
+                    <a href="/portals/main">
                         <img class="logo" th:src="@{/assets/media/icons/icon_logo_white.svg}" width="152" height="26" alt="Alice">
                     </a>
                     <div class="name" th:text="#{portal.label.mainPhrase}"></div>
