--- a/src/main/resources/public/template/portal/notice/noticeView.html
+++ b/src/main/resources/public/template/portal/notice/noticeView.html
@@ -39,7 +39,7 @@
             </div>
             <div class="horizontal-bar"></div>
             <div class="view-btn-content flex-row justify-content-end">
-                <a class="btn default-line" href="/portal/notices/search" th:text="#{common.btn.list}"></a>
+                <a class="btn default-line" href="/portals/notices/search" th:text="#{common.btn.list}"></a>
             </div>
         </div>
     </div>
