#9390 [Modal] 문서함 > 관련문서 추가

--- a/src/main/resources/public/src/scss/theme/default/_modal.scss
+++ b/src/main/resources/public/src/scss/theme/default/_modal.scss
@@ -145,4 +145,19 @@
       }
     }
   }
+  // 관련문서 모달
+  &.token-list {
+    width: $token-list-modal-width;
+    height: $token-list-modal-height;
+
+    .modal-content {
+      height: calc(#{$token-list-modal-height} - #{$modal-header-height} - #{$modal-bottom-height});
+      padding: 0.625rem 1.25rem 1.25rem 1.25rem; // 10px 20px 20px 20px
+
+      .field-label {
+        display: inline-block;
+        margin: 1rem 0 0.5rem 0; // 16px 0 8px 0
+      }
+    }
+  }
 }
