--- a/src/main/resources/public/src/scss/theme/default/_variables.scss
+++ b/src/main/resources/public/src/scss/theme/default/_variables.scss
@@ -122,6 +122,10 @@ $document-edit-modal-height:                  50.63rem; // 810px
 $document-display-modal-width:                66.875rem; // 1070px
 $document-display-modal-height:               26.25rem; // 420px
 
+//////////////////////////// 관련 문서 모달 /////////////////////////
+$token-list-modal-width:                   62.5rem; // 1000px
+$token-list-modal-height:                  46.875rem; // 750px
+
 /////////////////////////// contents //////////////////////////////
 $token-list-background-color:                 $white;
 $token-list-topic-color:                      $dark-gray;
