--- a/src/main/resources/public/template/token/tokenEditTab.html
+++ b/src/main/resources/public/template/token/tokenEditTab.html
@@ -63,7 +63,7 @@
             </div>
         </div>
         <div class="related-add justify-content-center align-items-center">
-            <button th:onclick="openPopUp([[${tokenId}]])">
+            <button th:onclick="openRelatedToken([[${tokenId}]])">
                 <span class="icon-plus"></span>
             </button>
         </div>
