--- a/src/main/resources/public/template/token/tokenEdit.html
+++ b/src/main/resources/public/template/token/tokenEdit.html
@@ -47,6 +47,119 @@
             window.open('/tokens/' + tokenId + '/view-pop', tokenId, 'width=1000, height=790');
         }
 
+        function getInstanceList(search, showProgressbar) {
+            restSubmit('get', '/tokens/view-pop/list?searchValue=' + search.trim() + '&tokenId=' + '[[${tokenId}]]', function(result) {
+                document.getElementById('instanceList').innerHTML = result;
+                let instanceDtEle = document.querySelectorAll('td[name=instanceDt]');
+                for (let i = 0; i < instanceDtEle.length; i++) {
+                    if (instanceDtEle[i].textContent !== '') {
+                        instanceDtEle[i].textContent = i18n.userDateTime(instanceDtEle[i].textContent);
+                    }
+                }
+                // 스크롤바
+                OverlayScrollbars(document.querySelector('.list-body'), { className: 'scrollbar' });
+            }, null, showProgressbar);
+        }
+
+        function saveTokenList() {
+            let checked = document.querySelectorAll('input[name=chk]:checked');
+            let jsonArray = new Array();
+
+            for (let i = 0; i < checked.length; i++) {
+                let jsonObject = new Object();
+
+                jsonObject.folderId = '[[${folderId}]]';
+                jsonObject.instanceId = checked[i].value;
+                jsonArray.push(jsonObject);
+            }
+
+            restSubmit('POST', '/rest/folders', function() {
+                opener.aliceDocument.createTokenInfoTab();
+                window.close();
+            }, jsonArray, false);
+        }
+
+        // 관련 문서 모달 내부 Template
+        function createModalContent(data) {
+            return `<div class="flex-column">` +
+                       `<input class="search col-5" type="text" name="search" id="search" th:placeholder="#{token.label.searchPlaceholder}"/>` +
+                       `<div class="table-set" id="instanceList"></div>` +
+                    `</div>`;
+        }
+
+        // 관련문서 모달
+        function openRelatedToken(tokenId) {
+            aliceJs.sendXhr({
+                method: 'GET',
+                url: '/rest/processes-admin/' + processId + '/data',
+                callbackFunc: function(xhr) {
+                    let responseObject = JSON.parse(xhr.responseText);
+                    responseObject.isView = isView;
+
+                    let options = {
+                        title: i18n.msg('token.label.relatedInstance'),
+                        body: createModalContent(),
+                        classes: 'token-list',
+                        buttons: [{
+                            content: i18n.msg('common.btn.add'),
+                            classes: "point-fill",
+                            bindKey: false,
+                            callback: function(modal) {
+                                saveTokenList();
+                            }
+                        },{
+                            content: i18n.msg('common.btn.close'),
+                            classes: "default-line",
+                            bindKey: false,
+                            callback: function(modal) {
+                                modal.hide();
+                            }
+                        }],
+                        close: {
+                            closable: false,
+                        },
+                        onCreate: function(modal) {
+                            document.getElementById('search').addEventListener('keyup', function() {
+                                getInstanceList(this.value, false);
+                            });
+                            getInstanceList(document.getElementById('search').value, true);
+                        }
+                    };
+                    // 모달 호출
+                    const tokenListModal = new modal(options);
+                    tokenListModal.show();
+                },
+                contentType: 'application/json; charset=utf-8'
+            });
+        }
+
+        // REST API
+        function restSubmit(method, url, data) {
+            const opt = {
+                method: method,
+                url: url,
+                params: JSON.stringify(data),
+                contentType: 'application/json',
+                callbackFunc: function(response) {
+                    if (method === 'POST') {
+                        const _width = 1800,
+                              _height = 920;
+                        // 중앙 배치
+                        const _left = Math.ceil((window.screen.width - _width) / 2);
+                        const _top = Math.ceil((window.screen.height - _height) / 4);
+
+                        let processId = response.responseText;
+                        sessionStorage.setItem('alice_processes-edit-' + processId, 'firstLoading');
+                        let specs = 'left=' + _left + ',top=' + _top;
+                        specs += ',menubar=no,toolbar=no,location=no,status=no,titlebar=no,scrollbars=yes,resizable=no';
+                        window.open('/processes/' + processId + '/edit', 'process_' + processId + '_edit', 'width=' + _width + ',height=' + _height + ',' + specs);
+                    }
+                    location.reload();
+                }
+            };
+            aliceJs.sendXhr(opt);
+        }
+
         function openProcessStatusPopUp() {
             window.open('/processes/[[${instanceId}]]/status', 'process_status_[[${instanceId}]]', 'width=1300, height=500');
         }
