--- a/src/main/resources/public/template/error.html
+++ b/src/main/resources/public/template/error.html
@@ -19,7 +19,7 @@
             <h3 th:text="${message}" class="error-code-txt"></h3>
             <h3 th:text="|#{error.label.errorCode} : ${error} (${status})|" class="error-code-txt"></h3>
             <h3 th:text="#{error.label.bottomPhrase}" class="error-bottom-txt"></h3>
-            <button th:text="#{error.btn.return}" class="btn-error"></button>
+            <button th:text="#{error.btn.return}" class="point-fill btn-error"></button>
         </div>
     </div>
 </div>
