--- a/src/main/resources/public/template/login.html
+++ b/src/main/resources/public/template/login.html
@@ -28,7 +28,7 @@
                     <label tabindex="-1" th:text="#{user.label.password}"></label>
                     <input type="password" id="upasswd" name="upasswd" maxlength="100" required="required">
                 </div>
-                <button class="login-submit" id="sendLogin" th:text="#{login.btn.login}" onclick="onLogin()"></button>
+                <button class="point-fill login-submit" id="sendLogin" th:text="#{login.btn.login}" onclick="onLogin()"></button>
             </div>
             <div class="login-divide flex-row align-items-center" th:text="#{login.label.or}"></div>
             <div class="login-platform">
