--- a/src/main/resources/public/template/sessionInvalid.html
+++ b/src/main/resources/public/template/sessionInvalid.html
@@ -19,7 +19,7 @@
                 <h1 id="counter" class="session-count-txt"></h1>
                 <h1 th:text="#{login.msg.redirectedLoginPage}"></h1>
             </div>
-            <a class="btn session-return" href="/login" id="gotoLoginPage" th:text="#{login.btn.gotoLoginPage}"></a>
+            <a class="btn point-fill session-return" href="/login" id="gotoLoginPage" th:text="#{login.btn.gotoLoginPage}"></a>
         </div>
     </div>
     <form id="logoutForm" name="logoutForm" th:action="@{/logout}" method="post"></form>
