--- a/src/main/resources/public/template/certification/signup.html
+++ b/src/main/resources/public/template/certification/signup.html
@@ -80,7 +80,7 @@
                         </div>
                     </div>
                 </form>
-                <button class="signup-submit" id="userSignUp" th:text="#{login.btn.doSignUp}"
+                <button class="point-fill signup-submit" id="userSignUp" th:text="#{login.btn.doSignUp}"
                         onclick="userRegister()"></button>
             </div>
         </div>
