#9548 URL 문서 및 DB 스크립트 현행화 - [공지사항, 역할, Faq]
- list를 s로 변경
/notices/list => /notices
/roles/list => /roles
/faqs/list => /faqs

--- a/src/main/resources/public/template/notice/noticeSearch.html
+++ b/src/main/resources/public/template/notice/noticeSearch.html
@@ -101,7 +101,7 @@
             } else {
                 offsetCount = 0;
                 urlParam = aliceJs.serialize(document.getElementById('searchFrm')) + '&offset=' + offsetCount;
-                restSubmit('get', '/notices/list?' + urlParam, isScroll);
+                restSubmit('get', '/notices?' + urlParam, isScroll);
             }
         }
 
