--- a/src/main/resources/public/template/faq/faqSearch.html
+++ b/src/main/resources/public/template/faq/faqSearch.html
@@ -53,7 +53,7 @@
             } else {
                 offsetCount = 0;
                 urlParam = aliceJs.serialize(document.getElementById('searchFrm')) + '&offset=' + offsetCount;
-                restSubmit('get', '/faqs/list?' + urlParam, isScroll);
+                restSubmit('get', '/faqs?' + urlParam, isScroll);
             }
         }
 
